# MacCoolDown

./: .gitignore  Cargo.toml  README.md
src/: analyzer.rs  config.rs  display.rs  interactive.rs  killer.rs  lib.rs  main.rs  maintenance.rs  scanner.rs  thermal.rs  throttle.rs  watcher.rs  whitelist.rs  wrapper.rs
