[package]
name = "cooldown"
version = "0.1.0"
edition = "2021"
description = "CLI tool to manage CPU-heavy processes and keep MacBook cool"
license = "MIT"

[[bin]]
name = "cooldown"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
sysinfo = "0.30"
colored = "2"
tabled = "0.15"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
chrono = "0.4"
indicatif = "0.17"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }
